# Craftr

./: .gitignore  README.md
app/: Cargo.toml  Info.plist  README.md  build.rs  craftr.exe.manifest
app/scratch/: check_tray.rs
app/src/: api.rs  clipboard.rs  config.rs  hotkeys.rs  main.rs  popup_win32.rs  settings_win32.rs
web/craftr-web/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  supabase-schema.sql
web/craftr-web/src/: App.tsx  index.css
web/craftr-web/src/components/: Footer.tsx  Logo.tsx  Navbar.tsx
web/craftr-web/src/hooks/: useDownload.ts
web/craftr-web/src/pages/: Changelog.tsx  Download.tsx  Home.tsx  Pricing.tsx  Success.tsx
