[package]
name = "craftr"
version = "0.1.0"
edition = "2021"
description = "A system tray app that enhances/compresses prompts using Groq AI"
authors = ["Craftr Team"]

# Hide console window on Windows release builds
[[bin]]
name = "craftr"
path = "src/main.rs"

[dependencies]
rdev = "0.5"
arboard = "3"
tray-icon = "0.14"
muda = "0.13"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
native-dialog = "0.7"
dirs = "5"
chrono = "0.4"
opener = "0.7"
winreg = "0.52"
image = "0.24"


[build-dependencies]
winres = "0.1"

[package.metadata.winres]
ICON = "assets/icon.ico"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winuser", 
  "shellapi",
  "windef",
  "wingdi",
  "libloaderapi",
  "errhandlingapi"
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
